--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -13,6 +13,15 @@ on:
         type: boolean
         required: true
         default: true
+      bump_manual_version:
+        description: "Manually bump version number"
+        type: boolean
+        required: false
+        default: false
+      manual_version:
+        description: "Version number to set (e.g. 1.2.3)"
+        type: string
+        required: false
 
 concurrency: release
 
@@ -67,7 +76,7 @@ jobs:
         run: git config --global user.email "actions@github.com" && git config --global user.name "github-actions"
 
       - name: Create Continuous Deployment - Beta (non-prod)
-        if: steps.get_branch.outputs.branch == 'main' && !inputs.production_release
+        if: steps.get_branch.outputs.branch == 'main' && !inputs.production_release && !inputs.bump_manual_version
         run: |
           poetry run semantic-release \
             -v DEBUG \
@@ -79,7 +88,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Continuous Deployment - Production
-        if: steps.get_branch.outputs.branch == 'main' && inputs.production_release
+        if: steps.get_branch.outputs.branch == 'main' && inputs.production_release && !inputs.bump_manual_version
         run: |
           poetry run semantic-release \
             -v DEBUG \
@@ -90,5 +99,37 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish package distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Create Continuous Deployment - Manual Version
+        if: inputs.bump_manual_version && !inputs.production_release
+        run: |
+          # Validate manual version is provided
+          if [ -z "${{ inputs.manual_version }}" ]; then
+            echo "Error: manual_version is required when release_type is 'manual'"
+            exit 1
+          fi
+
+          # Set the manual version from input
+          VERSION=${{ inputs.manual_version }}
+
+          # Update version in pyproject.toml
+          poetry version $VERSION
+
+          # Commit the version change
+          git add pyproject.toml
+          git commit -m "build: release version $VERSION"
+
+          # Create and push tag
+          git tag -a "v$VERSION" -m "Release v$VERSION"
+          git push origin "v$VERSION"
+          git push origin main
+
+          # Build the package
+          poetry build
+
+          # Create GitHub release
+          gh release create "v$VERSION" --title "v$VERSION" ./dist/* --generate-notes
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Publish package distributions to PyPI
+      #   uses: pypa/gh-action-pypi-publish@release/v1
